--- a/src/styles/modules/_global.scss
+++ b/src/styles/modules/_global.scss
@@ -32,7 +32,7 @@
   --pointer-x-pos: 0;
   --pointer-y-pos: 0;
 
-  --below-deleted-animation-duration: 0ms;
+  --below-deleted-animation-duration: 200ms;
   --color-three: #eee;
   --color-four: #ccc;
   --golden-ratio: 1.61803398875;
@@ -112,24 +112,13 @@ button {
 // }
 
 .scrollbar-track {
-  // z-index: -1;
-  // position: relative;
-  // position: absolute;
-  // position: fixed;
-  // position: sticky;
   --scrolltop: 0;
   transform: translateY(var(--scrolltop));
   position: absolute;
-  // overflow-y: scroll;
-  // top: var(--header-height);
   top: 0;
   left: calc(34rem - var(--lesser-padding) * 3);
-  // right: 0;
   width: calc(var(--lesser-padding) * 3);
-  // height: 506px;
   height: 100%;
-  // height: 526px;
-  // background: purple;
   padding: 0 var(--lesser-padding);
 
   &__thumb {
@@ -143,27 +132,45 @@ button {
     transform: translateY(var(--thumb-offset));
     width: var(--lesser-padding);
     background: var(--color-two);
-    // border-radius: var(--lesser-padding);
-    transition: background-color 200ms ease-in-out;
+    transition: background-color 100ms ease-in-out;
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 68rem;
+      height: 68rem;
+      z-index: -1;
+      opacity: 0;
+      background: radial-gradient(circle at center, var(--color-two-hover), transparent 50%);
+      transform: translate(calc(var(--x-pos) - 50%), calc(var(--y-pos) - 50%));
+      // transition: none;
+      transition: opacity 100ms ease-out;
+    }
 
     &:hover {
-      // background: var(--color-two-hover);
-      background: radial-gradient(circle at var(--x-pos) var(--y-pos), var(--color-two-hover), var(--color-two) 34rem);
-      transition: background-color var(--below-deleted-animation-duration) ease-in-out;
+      &::after {
+        content: "";
+        opacity: 1;
+        transition: opacity 100ms ease-in;
+      }
     }
 
     &--transforming {
       transform-origin: top;
-      // transform-origin: center;
       transform: translateY(var(--thumb-offset)) scaleY(var(--ratio));
-      transition: background-color var(--below-deleted-animation-duration) ease-out, transform var(--below-deleted-animation-duration) ease-in-out;
-      background: purple;
+      transition: transform var(--below-deleted-animation-duration) ease-out;
+      background: #9932CC;
 
       &:hover {
-        transform-origin: top;
-        transform: translateY(var(--thumb-offset)) scaleY(var(--ratio));
-        transition: background-color var(--below-deleted-animation-duration) ease-out, transform var(--below-deleted-animation-duration) ease-in-out;
-        background: purple;
+
+        &::after {
+          content: "";
+          opacity: 0;
+          transition: none;
+        }
       }
     }
   }
@@ -172,16 +179,5 @@ button {
     visibility: hidden;
     transition: none;
     // display: none;
-  }
-}
-
-
-@keyframes glow {
-  from {
-    box-shadow: 0 0 0 2px lime;
-  }
-
-  to {
-    box-shadow: 0 0 0 2px red;
   }
 }
