--- a/src/styles/modules/_tab.scss
+++ b/src/styles/modules/_tab.scss
@@ -28,6 +28,7 @@
   transition: stroke 200ms ease-out;
   // content-visibility: auto;
   // animation: 5000ms ease-in-out banana;
+  font-family: 'Open Sans', sans-serif;
   z-index: 0;
 
   &:hover {
